--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,6 +17,15 @@ services:
     ports:
       - "8080:8080"
     links:
-      - oasipdb:mysql
+      - oasipdb
+
+  oasipfrontend:
+    container_name: oasipfrontend
+    build: 
+      context: ./frontend
+      dockerfile: Dockerfile
+    image: frontend
+    ports:
+      - "80:80"
     
   
