[+] production 1 proxy 4 container

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,6 +26,13 @@ services:
       dockerfile: Dockerfile
     image: frontend
     ports:
+      - "3000:3000"
+  ngix:
+    container_name: nginx
+    image: nginx
+    volumes:
+      - ./nginx.conf:/etc/nginx/conf.d/default.conf
+    ports:
       - "80:80"
     
   
