--- a/frontend/nginxfrontend.conf
+++ b/frontend/nginxfrontend.conf
@@ -16,7 +16,7 @@ server {
         proxy_pass http://backendserver;
     }
     location /event-lists {
-        return http://localhost;
+        return http://ip21us1.sit.kmutt.ac.th/;
     }
     
 }
