--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     },
     "dependencies": {
         "moment": "^2.29.3",
+        "v-calendar": "^2.4.1",
         "vue": "^3.2.25",
         "vue-router": "^4.0.14"
     },
