--- a/frontend/nginxfrontend.conf
+++ b/frontend/nginxfrontend.conf
@@ -12,7 +12,7 @@ server {
        root /usr/share/nginx/html;
        index index.html index.htm;
     }
-      location /api {
+      location ~ ^/api/.*$ {
         proxy_pass http://backendserver;
     }
     location /event-lists {
