--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,13 +22,15 @@ services:
   oasipfrontend:
     container_name: oasipfrontend
     restart: always
+    environment:
+      - "VITE_BASE_URL=http://192.168.1.41:8080"
     build: 
       context: ./frontend
       dockerfile: Dockerfile
     image: frontend
     ports:
       - "3000:3000"
-  ngix:
+  nginx:
     container_name: nginx
     restart: always
     image: nginx
