--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,34 +9,34 @@ services:
       - "MYSQL_ROOT_PASSWORD=us1t2pproject"
     volumes:
       - ./data/oasip-create-insert.sql:/docker-entrypoint-initdb.d/setup.sql
-  # oasipbackend:
-  #   container_name: oasipbackend
-  #   build: ./backend
-  #   restart: always
-  #   image: backendhuakapook
-  #   ports:
-  #     - "8080:8080"
-  #   links:
-  #     - oasipdb
+  oasipbackend:
+    container_name: oasipbackend
+    build: ./backend
+    restart: always
+    image: backendhuakapook
+    ports:
+      - "8080:8080"
+    links:
+      - oasipdb
 
-  # oasipfrontend:
-  #   container_name: oasipfrontend
-  #   restart: always
-  #   environment:
-  #     - "VITE_BASE_URL=http://192.168.1.41:8080"
-  #   build: 
-  #     context: ./frontend
-  #     dockerfile: Dockerfile
-  #   image: frontend
-  #   ports:
-  #     - "3000:3000"
-  # nginx:
-  #   container_name: nginx
-  #   restart: always
-  #   image: nginx
-  #   volumes:
-  #     - ./nginx.conf:/etc/nginx/conf.d/default.conf
-  #   ports:
-  #     - "80:80"
+  oasipfrontend:
+    container_name: oasipfrontend
+    restart: always
+    environment:
+      - "VITE_BASE_URL=http://192.168.1.41:8080"
+    build: 
+      context: ./frontend
+      dockerfile: Dockerfile
+    image: frontend
+    ports:
+      - "3000:3000"
+  nginx:
+    container_name: nginx
+    restart: always
+    image: nginx
+    volumes:
+      - ./nginx.conf:/etc/nginx/conf.d/default.conf
+    ports:
+      - "80:80"
     
   
