--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,7 +13,7 @@ services:
     container_name: oasipbackend
     build: ./backend
     restart: always
-    image: backendhuakapook
+    image: backend
     ports:
       - "8080:8080"
     links:
