[test] public path

--- a/nginx.conf
+++ b/nginx.conf
@@ -8,13 +8,13 @@ server {
     listen  [::]:80;
 
 
-    location / {
+    location /us-1 {
        proxy_pass http://frontendserver;
     }
-    location /api {
+    location /us-1/api {
         deny all;
     }
-    location /event-lists {
+    location /us-1/event-lists {
         proxy_pass http://frontendserver;
     }
 }
