[+] root path ngix.conf

--- a/nginx.conf
+++ b/nginx.conf
@@ -1,6 +1,5 @@
 upstream FrontendServer{
     server oasipfrontend:3000;
-    server ip21us1.sit.kmutt.ac.th:3000;
 }
 
 server {
@@ -8,6 +7,9 @@ server {
     listen  [::]:80;
 
 
+    location / {
+       proxy_pass http://frontendserver;
+    }
     location /us-1 {
        proxy_pass http://frontendserver;
     }
