[+] reuce to 3 container

--- a/frontend/nginxfrontend.conf
+++ b/frontend/nginxfrontend.conf
@@ -4,8 +4,8 @@ upstream BackendServer{
 
 
 server {
-    listen       3000;
-    listen  [::]:3000;
+    listen       80;
+    listen  [::]:80;
 
 
     location / {
@@ -16,7 +16,7 @@ server {
         proxy_pass http://backendserver;
     }
     location /event-lists {
-        return http://ip21us1.sit.kmutt.ac.th/;
+        return http://intproj21.sit.kmutt.ac.th/us1/;
     }
     
 }
