--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -17,7 +17,7 @@ jobs:
   # This workflow contains a single job called "build"
   build:
     # The type of runner that the job will run on
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
@@ -26,10 +26,9 @@ jobs:
 
       - name: compose down delete image
         run: |
-            docker-compose rm -svf oasipfrontend oasipbackend
-            docker rmi backned frontend
+          docker-compose rm -svf oasipfrontend oasipbackend
+          docker rmi backned frontend
       # Runs a set of commands using the runners shell
       - name: build and deploy
         run: |
           docker-compose up -d
-          echo test, and deploy your project.
