--- a/frontend/.env
+++ b/frontend/.env
@@ -1,3 +1,3 @@
 #.env
-VITE_BASE_URL=/us1/api
-#VITE_BASE_URL=http://intproj21.sit.kmutt.ac.th/us1/api
+#VITE_BASE_URL=/us1/api
+VITE_BASE_URL=http://intproj21.sit.kmutt.ac.th/us1/api
