--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -27,7 +27,7 @@ jobs:
       - name: compose down delete image
         run: |
           docker-compose rm -svf oasipfrontend oasipbackend
-          docker rmi backned frontend
+          docker rmi backend frontend
       # Runs a set of commands using the runners shell
       - name: build and deploy
         run: |
