--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,6 +8,7 @@
         "preview": "vite preview --port 3000"
     },
     "dependencies": {
+        "@vuepic/vue-datepicker": "^3.2.0",
         "moment": "^2.29.3",
         "v-calendar": "^3.0.0-alpha.8",
         "vue": "^3.2.25",
