[+] case error BE;test 4 container;change flow cicd

--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -27,7 +27,7 @@ jobs:
       - name: compose down delete image
         run: |
           docker-compose rm -svf oasipfrontend oasipbackend
-          docker rmi backend frontend
+          docker rmi $(docker images -f "dangling=true" -q) --force
       # Runs a set of commands using the runners shell
       - name: build and deploy
         run: |
