--- a/nginx.conf
+++ b/nginx.conf
@@ -1,6 +1,9 @@
 upstream FrontendServer{
     server oasipfrontend:3000;
 }
+upstream BackendServer{
+    server oasipbackend:8080;
+}
 
 server {
     listen       80;
@@ -10,13 +13,10 @@ server {
     location / {
        proxy_pass http://frontendserver;
     }
-    location /us1 {
-       proxy_pass http://frontendserver;
-    }
     location /us1/api {
-        deny all;
+        proxy_pass http://backendserver;
     }
-    location /us1/event-lists {
+    location /event-lists {
         proxy_pass http://frontendserver;
     }
 }
