--- a/nginx.conf
+++ b/nginx.conf
@@ -13,7 +13,7 @@ server {
     location / {
        proxy_pass http://frontendserver;
     }
-    location /us1/api {
+    location /api {
         proxy_pass http://backendserver;
     }
     location /event-lists {
