--- a/nginx.conf
+++ b/nginx.conf
@@ -10,13 +10,13 @@ server {
     listen  [::]:80;
 
 
-    location / {
+    location /us1/ {
        proxy_pass http://frontendserver;
     }
-    location /api {
+    location /us1/api {
         proxy_pass http://backendserver;
     }
-    location /event-lists {
+    location /us1/event-lists {
         proxy_pass http://frontendserver;
     }
 }
