--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -27,8 +27,10 @@ jobs:
       - name: compose down delete image
         run: |
           docker-compose rm -svf oasipfrontend oasipbackend oasipproxy
-          docker rmi $(docker images -f "dangling=true" -q) --force
+          docker rmi backend frontend
+          
       # Runs a set of commands using the runners shell
       - name: build and deploy
         run: |
           docker-compose up -d
+          docker rmi $(docker images -f "dangling=true" -q) --force
