--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,7 +10,7 @@
     "dependencies": {
         "@vuepic/vue-datepicker": "^3.2.0",
         "moment": "^2.29.3",
-        "v-calendar": "^3.0.0-alpha.8",
+        "pinia": "^2.0.14",
         "vue": "^3.2.25",
         "vue-router": "^4.0.14"
     },
