--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
     environment:
       - "MYSQL_ROOT_PASSWORD=us1t2pproject"
     volumes:
-      - ./data/oasip-create-insert.sql:/docker-entrypoint-initdb.d/setup.sql
+      - ./data/oasip-new-data.sql:/docker-entrypoint-initdb.d/setup.sql
       - ./data/my.cnf:/etc/mysql/conf.d/custom.cnf
   oasipbackend:
     container_name: oasipbackend
