--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.password=123_jing
-spring.datasource.username=root
-spring.datasource.url=jdbc:mysql://localhost:3306/oasip
+spring.datasource.password=us-1-t2p
+spring.datasource.username=us1
+spring.datasource.url=jdbc:mysql://oasipbackend/oasip
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
