--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -28,6 +28,13 @@ jobs:
         run: |
           docker-compose rm -svf oasipfrontend oasipbackend oasipproxy
           docker rmi backend frontend
+      - name: tag and push registry image
+          docker build -t backend ./backend
+          docker tag backend rabmeat/oasip-us1-backend
+          docker push rabmeat/oasipbackend
+          docker build -t frontend ./frontend
+          docker tag frontend rabmeat/oasip-us1-frontend
+          docker push rabmeat/oasip-us1-frontend
           
       # Runs a set of commands using the runners shell
       - name: build and deploy
